welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
}
^Program:7: error: not found: value vuBiscuit
  vuBiscuit= false
  ^Program:11: error: not found: value vuBiscuit
      vuBiscuit= true
      ^Program:17: error: not found: value vuBiscuit
  return vuBiscuit
         ^Program:17: warning: enclosing method col has result type Unit: return value discarded
  return vuBiscuit
  ^